Did some file reorganizing

--- a/weatherapp2css.css
+++ b/weatherapp2css.css
@@ -3,7 +3,7 @@ body {
   display: block;
   margin: 0 auto;
   color: #fff;
-  background-image: url("cloud-background.jpg");
+  background-image: url("images/cloud-background.jpg");
   background-size: auto;
 }
 
